--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,7 +24,7 @@
   --z-fixed: 100;
 }
 
-@media screen and (min-width: 968px) {
+@media (min-width: 968px) {
   :root {
     --big-font-size: 3rem;
     --h2-font-size: 2rem;
@@ -127,7 +127,7 @@ img {
   font-weight: var(--font-semi);
 }
 
-@media screen and (max-width: 767px) {
+@media (max-width: 767px) {
   .menu_nav {
     position: fixed;
     top: var(--header-height);
@@ -269,7 +269,7 @@ img {
   border-radius: 15px;
 }
 
-@media screen and (max-width: 968px) {
+@media (max-width: 968px) {
   .inicio_blob-img {
     width: 260px;
   }
@@ -279,7 +279,7 @@ img {
   }
 }
 
-@media screen and (max-width: 880px) {
+@media (max-width: 880px) {
   .inicio {
     align-items: center;
     text-align: center;
@@ -418,7 +418,7 @@ img {
 }
 
 /*MEDIA*/
-@media screen and (max-width: 320px) {
+@media (max-width: 320px) {
   .inicio {
     row-gap: 2rem;
   }
@@ -432,7 +432,7 @@ img {
   }
 }
 
-@media screen and (min-width: 576px) {
+@media (min-width: 576px) {
   .inicio {
     padding: 4rem 0 2rem;
   }
@@ -474,7 +474,7 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media (min-width: 768px) {
   body {
     margin: 0;
   }
@@ -533,7 +533,7 @@ img {
   }
 }
 
-@media screen and (min-width: 992px) {
+@media (min-width: 992px) {
   .bd-grid {
     margin-left: auto;
     margin-right: auto;
