--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,6 +50,7 @@ body {
   font-size: var(--normal-font-size);
   color: var(--second-color);
   background-color: var(--fourth-color);
+  overflow-x: hidden;
 }
 
 h1,
