--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -240,10 +240,12 @@ img {
   position: fixed;
   top: 50%;
   right: 1rem;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   z-index: var(--z-fixed);
 }
 
@@ -379,6 +381,9 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
@@ -644,5 +649,46 @@ img {
   .proyectos_video {
     max-width: 100%;
     height: auto;
+  }
+}
+
+@media not all and (min-resolution:.001dpcm) {
+  @supports (-webkit-appearance:none) {
+    .imagenes, .imagenes_s {
+      gap: 0;
+    }
+    
+    .imagenes_slide, .imagenes_s .imagenes_slide {
+      margin: 0 2rem;
+    }
+    
+    .inicio_social {
+      gap: 0;
+    }
+    
+    .inicio_social-icon {
+      margin-bottom: 1rem;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .sobremi_container {
+    display: block;
+    padding: 0 1rem;
+  }
+  
+  .sobremi_texto {
+    margin-bottom: 1rem;
+  }
+  
+  .inicio_blob-img {
+    width: 100%;
+    max-width: 260px;
+    height: auto;
+  }
+  
+  .section {
+    overflow: hidden;
   }
 }
